--- a/samad23rdsepassignments/src/app/globals.css
+++ b/samad23rdsepassignments/src/app/globals.css
@@ -25,3 +25,18 @@ body {
     text-wrap: balance;
   }
 }
+
+html, body {
+  height: 100%;            
+  margin: 0;                
+}
+
+body {
+  display: flex;
+  flex-direction: column;   
+}
+
+footer {
+  margin-top: auto;        
+}
+
