--- a/samad23rdsepassignments/src/app/components/Navbar/Navbar.module.css
+++ b/samad23rdsepassignments/src/app/components/Navbar/Navbar.module.css
@@ -1,8 +1,16 @@
+/* components/Navbar/Navbar.module.css */
 .navbar {
-    display: flex;
-    gap: 1rem;
+    background-color: #333;
     padding: 1rem;
-    background-color: #282c34;
-    color: white;
+  }
+  
+  .navbar a {
+    color: #fff;
+    margin-right: 1rem;
+    text-decoration: none;
+  }
+  
+  .navbar a:hover {
+    text-decoration: underline;
   }
   
