--- a/samad23rdsepassignments/src/app/components/Footer/Footer.module.css
+++ b/samad23rdsepassignments/src/app/components/Footer/Footer.module.css
@@ -1,9 +1,10 @@
-
 .footer {
-  background-color: #f1f1f1;
-  text-align: center;
-  padding: 1rem;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-}
+    background-color: #343a40;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+  }
+  
