--- a/samad23rdsepassignments/src/app/components/Navbar/Navbar.module.css
+++ b/samad23rdsepassignments/src/app/components/Navbar/Navbar.module.css
@@ -1,16 +1,14 @@
-/* components/Navbar/Navbar.module.css */
 .navbar {
-    background-color: #333;
-    padding: 1rem;
+    background-color: #f8f9fa;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
   }
   
-  .navbar a {
-    color: #fff;
-    margin-right: 1rem;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    text-decoration: underline;
+  button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
   }
   
